k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: demo
  template:
    metadata:
      labels:
        app: demo
    spec:
      containers:
        - name: demo-container
          image: stalind10/demo_service:v1.0.0
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: h2data
              mountPath: /data
          resources:
            requests:
              memory: 128Mi
              cpu: 100m
            limits:
              memory: 128Mi
              cpu: 100m
      volumes:
        - name: h2data
          emptyDir: {}
